error.txt
solution.cpp: In function 'int main()':
solution.cpp:6:22: error: 'asdsdad' was not declared in this scope
    6 |         string mx="";asdsdad
      |                      ^~~~~~~
solution.cpp:9:22: warning: comparison of integer expressions of different signedness: 'int' and 'std::__cxx11::basic_string<char>::size_type' {aka 'long unsigned int'} [-Wsign-compare]
    9 |         for(int i=0;i<s.length();i++){
      |                     ~^~~~~~~~~~~
solution.cpp:10:31: error: 's1' was not declared in this scope; did you mean 's'?
   10 |                 if(s[i]!=' ') s1+=s[i];
      |                               ^~
      |                               s
solution.cpp:12:40: error: 's1' was not declared in this scope; did you mean 's'?
   12 |                         if(mx.length()<s1.length()){
      |                                        ^~
      |                                        s
solution.cpp:15:25: error: 's1' was not declared in this scope; did you mean 's'?
   15 |                         s1="";
      |                         ^~
      |                         s
COMPILATION ERROR
